tests/baselines/reference/genericIndexedAccessMethodIntersectionCanBeAccessed.errors.txt
genericIndexedAccessMethodIntersectionCanBeAccessed.ts(17,16): error TS2339: Property '__$daemonMode' does not exist on type '({ __$daemonMode?: string | undefined; __$action?: string | undefined; } & { id?: string | undefined; }) | undefined'.
genericIndexedAccessMethodIntersectionCanBeAccessed.ts(17,31): error TS2339: Property '__$action' does not exist on type '({ __$daemonMode?: string | undefined; __$action?: string | undefined; } & { id?: string | undefined; }) | undefined'.
genericIndexedAccessMethodIntersectionCanBeAccessed.ts(17,42): error TS2339: Property 'id' does not exist on type '({ __$daemonMode?: string | undefined; __$action?: string | undefined; } & { id?: string | undefined; }) | undefined'.


==== genericIndexedAccessMethodIntersectionCanBeAccessed.ts (3 errors) ====
    type ExtendedService<T> = {
        [K in keyof T]: T[K] & {
            __$daemonMode?: string;
            __$action?: string;
        };
    };
    
    type Service<T> = {
        [K in keyof T]: T[K] & {id?: string};
    };
    
    export const createService = <T>(
        ServiceCtr: ExtendedService<T> & Service<T>
    ) => {
        Object.keys(ServiceCtr).forEach(key => {
            const method = (ServiceCtr)[key as keyof T];
            const {__$daemonMode, __$action, id} = method;
                   ~~~~~~~~~~~~~
!!! error TS2339: Property '__$daemonMode' does not exist on type '({ __$daemonMode?: string | undefined; __$action?: string | undefined; } & { id?: string | undefined; }) | undefined'.
                                  ~~~~~~~~~
!!! error TS2339: Property '__$action' does not exist on type '({ __$daemonMode?: string | undefined; __$action?: string | undefined; } & { id?: string | undefined; }) | undefined'.
                                             ~~
!!! error TS2339: Property 'id' does not exist on type '({ __$daemonMode?: string | undefined; __$action?: string | undefined; } & { id?: string | undefined; }) | undefined'.
        })
    }
    